# legion

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  bors.toml  deny.toml  readme.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: allocation_stress.rs  basic_query.rs  benchmarks.rs  insertion.rs  parallel_query.rs  pos_vel.rs  transform.rs  transform_experimental.rs
codegen/: Cargo.toml  readme.md
codegen/src/: derive.rs  lib.rs
codegen/tests/: basic.rs  for_each.rs  par_for_each.rs
codegen/tests/failures/: par_mut_command.rs  par_mut_command.stderr  par_mut_resource.rs  par_mut_resource.stderr  par_mut_world.rs  par_mut_world.stderr  value_argument.rs  value_argument.stderr
docs/book/src/: 01_introduction.md
example/hello_world/: Cargo.toml
example/serialization/: Cargo.toml
example/serialization/src/: main.rs
examples/: hello_world.rs  serde.rs
legion-derive/: Cargo.toml
legion-derive/src/: lib.rs  uuid.rs
legion_core/: Cargo.toml
legion_core/src/: borrow.rs  command.rs  cons.rs  entity.rs  filter.rs  lib.rs  query.rs  storage.rs  subworld.rs  world.rs
legion_core/src/serialize/: de.rs
legion_experiment/: Cargo.toml
legion_experiment/src/: borrow.rs  cons.rs  entity.rs  entry.rs  event.rs  hash.rs  insert.rs  lib.rs  subworld.rs  universe.rs  world.rs
legion_experiment/src/iter/: indexed.rs
legion_experiment/src/query/: mod.rs  view.rs
legion_experiment/src/query/filter/: and.rs  any.rs  component.rs  maybe_changed.rs  mod.rs  not.rs  or.rs
legion_experiment/src/query/view/: entity.rs  mod.rs  read.rs  try_read.rs  try_write.rs  write.rs
legion_experiment/src/serialize/: de.rs  entities.rs  mod.rs  packed.rs  ser.rs
legion_experiment/src/storage/: archetype.rs  chunk.rs  component.rs  components.rs  filter.rs  group.rs  index.rs  mod.rs  packed.rs  slicevec.rs  tags.rs
legion_experiment/src/systems/: command.rs  mod.rs  resources.rs  schedule.rs  system.rs
legion_systems/: Cargo.toml
legion_systems/src/: lib.rs  resource.rs  schedule.rs  system.rs
src/: accessor.rs  borrow.rs  borrows.rs  command.rs  cons.rs  de.rs  entity.rs  entry.rs  event.rs  fdsa.txt  filter.rs  insert.rs  iterator.rs  lib.rs  query.rs  resource.rs  resources.rs  schedule.rs  ser.rs  serde.rs  serialize.rs  storage.rs  storage_new.rs  subworld.rs  system.rs  system_data.rs  systems.rs  world.rs
src/experimental/: borrow.rs  entity.rs  filter.rs  lib.rs  mod.rs  query.rs  storage.rs  world.rs
src/internals/: cons.rs  entity.rs  entry.rs  event.rs  hash.rs  insert.rs  mod.rs  permissions.rs  subworld.rs  world.rs
src/internals/iter/: indexed.rs  map.rs  mod.rs  zip.rs
src/internals/query/: mod.rs
src/internals/query/filter/: and.rs  any.rs  component.rs  maybe_changed.rs  mod.rs  not.rs  or.rs  passthrough.rs  try_component.rs
src/internals/query/view/: entity.rs  mod.rs  read.rs  system_resources_view.rs  try_read.rs  try_write.rs  write.rs
src/internals/serialize/: archetypes.rs  de.rs  entities.rs  id.rs  mod.rs  packed.rs  ser.rs
src/internals/storage/: archetype.rs  component.rs  group.rs  index.rs  mod.rs  packed.rs  slicevec.rs
src/internals/systems/: command.rs  mod.rs  resources.rs  schedule.rs  system.rs
src/iter/: map.rs
src/query/: mod.rs
src/query/filter/: and.rs  any.rs  component.rs  maybe_changed.rs  mod.rs  not.rs  or.rs  passthrough.rs  try_component.rs
src/query/view/: entity.rs  mod.rs  read.rs  try_read.rs  try_write.rs  write.rs
src/serialize/: de.rs  entities.rs  mod.rs  packed.rs  ser.rs
src/storage/: archetype.rs  component.rs  group.rs  index.rs  mod.rs  packed.rs  slicevec.rs
src/systems/: command.rs  mod.rs  resources.rs  schedule.rs  system.rs
tests/: codegen.rs  derive.rs  entity_api.rs  iterator.rs  query_api.rs  query_api_experimental.rs  system_resources.rs  systems.rs  systems_basic.rs  systems_failures.rs  systems_for_each.rs  systems_par_for_each.rs  wasm.rs  world_api.rs  world_api_experimental.rs
tests/failures/: par_mut_command.rs  par_mut_command.stderr  par_mut_resource.rs  par_mut_resource.stderr  par_mut_world.rs  par_mut_world.stderr  value_argument.rs  value_argument.stderr
