[package]
name = "legion"
version = "0.3.0"
description = "High performance entity component system (ECS) library"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
repository = "https://github.com/TomGillen/legion"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]
readme = "readme.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "TomGillen/legion", branch = "master" }

[features]
default = ["par-iter", "serialize", "crossbeam-events"]
par-iter = ["rayon"]
extended-tuple-impls = []
serialize = ["serde", "erased-serde", "uuid/serde"]
crossbeam-events = ["crossbeam-channel"]

[dependencies]
smallvec = "1.4"
itertools = "0.9"
downcast-rs = "1.2"
derivative = "2.1"
paste = "0.1"
parking_lot = "0.11"
bit-set = "0.5"
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
rayon = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
erased-serde = { version = "0.3", optional = true }
crossbeam-channel = {version ="0.4", optional = true}
lazy_static = "1.4.0"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
tracing-subscriber = "0.2"
criterion = "0.3"
cgmath = "0.17"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "parallel_query"
harness = false

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "insertion"
harness = false