[package]
name = "legion"
version = "0.4.0"
description = "High performance entity component system (ECS) library"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
repository = "https://github.com/amethyst/legion"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]
readme = "readme.md"
license = "MIT"
edition = "2018"

[features]
default = ["parallel", "serialize", "crossbeam-events", "codegen"]
parallel = ["rayon"]
extended-tuple-impls = []
serialize = ["serde", "erased-serde", "uuid", "uuid/serde", "scoped-tls-hkt"]
crossbeam-events = ["crossbeam-channel"]
codegen = ["legion_codegen"]
stdweb = ["uuid/stdweb"]
wasm-bindgen = ["uuid/wasm-bindgen"]

[dependencies]
legion_codegen = { path = "codegen", version = "0.4.0", optional = true }
smallvec = "1.6"
itertools = "0.10"
downcast-rs = "1.2"
paste = "1.0.5"
parking_lot = "0.11"
bit-set = "0.5"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"], optional = true }
rayon = { version = "1.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
scoped-tls-hkt = { version = "0.1", optional = true }
erased-serde = { version = "0.3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
atomic_refcell = "0.1.7"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
criterion = "0.3"
cgmath = "0.18"
trybuild = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "parallel_query"
harness = false
required-features = ["parallel"]

[[bench]]
name = "transform"
harness = false
required-features = ["parallel"]

[[bench]]
name = "insertion"
harness = false

[[test]]
name = "codegen"
required-features = ["codegen"]

[[test]]
name = "systems_par_for_each"
required-features = ["parallel"]
