[package]
name = "legion-derive"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
uuid = { version = "0.8", features = ["v4"] }
serde = {version = "1", features = ["derive"] }
ron = "0.5"


[lib]
name = "legion_derive"
proc-macro = true
