[package]
name = "legion_experiment"
version = "0.2.1"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[features]
default = ["par-iter"]
par-iter = ["rayon"]
extended-tuple-impls = []

[dependencies]
smallvec = "1.4"
itertools = "0.9"
downcast-rs = "1.1"
derivative = "2.1"
paste = "0.1"
rayon = { version = "1.3", optional = true }
parking_lot = "0.10"